    ball and use it as .orig.tar.gz
  * No more uncompress man pages. They should be fine as they are.
  * Clean up debian/rules
    + Remove unused code
    + No more clean up stamp files manually, dh_clean does that already
  * Switch to source format "3.0 (quilt)"
  * Fixes the following lintian warnings:
    + copyright-without-copyright-notice

 -- Axel Beckert <abe@debian.org>  Fri, 30 Aug 2013 21:35:08 +0200

freebsd-manpages (8.2-1) unstable; urgency=low

  * New upstream version.
  * Bump standards version to 3.9.2.
  * Bump debhelper version to 8.

 -- Gürkan Sengün <gurkan@phys.ethz.ch>  Wed, 04 May 2011 12:06:02 +0200

freebsd-manpages (8.1-1) unstable; urgency=low

  * New upstream version.
  * Bump standards version to 3.9.1.

 -- Gürkan Sengün <gurkan@phys.ethz.ch>  Thu, 05 Aug 2010 12:17:52 +0200

freebsd-manpages (8.0-1) unstable; urgency=low

  * New upstream version.

 -- Gürkan Sengün <gurkan@phys.ethz.ch>  Tue, 24 Nov 2009 09:42:18 +0100

freebsd-manpages (8.0~rc3-1) unstable; urgency=low

  * New upstream version.
  * Bump standards version.

 -- Gürkan Sengün <gurkan@phys.ethz.ch>  Mon, 16 Nov 2009 11:11:06 +0100

freebsd-manpages (8.0~beta3-1) unstable; urgency=low

  * New upstream version.

 -- Gürkan Sengün <gurkan@phys.ethz.ch>  Thu, 03 Sep 2009 15:16:59 +0200

freebsd-manpages (8.0~beta2-1) unstable; urgency=low

  * New upstream version.
  * Add GNU/kFreeBSD Maintainers.
  * Bump standards version.

 -- Gürkan Sengün <gurkan@phys.ethz.ch>  Fri, 17 Jul 2009 11:47:00 +0200

freebsd-manpages (7.2-1) unstable; urgency=low

  * New upstream version.

 -- Gürkan Sengün <gurkan@phys.ethz.ch>  Sun, 03 May 2009 12:05:51 +0200

freebsd-manpages (7.1-2) unstable; urgency=low

  * Updated debian/rules.
  * Updated debian/copyright.
  * Bump standards version.

 -- Gürkan Sengün <gurkan@phys.ethz.ch>  Thu, 09 Apr 2009 16:17:02 +0200

freebsd-manpages (7.1-1) unstable; urgency=low

  * New upstream version.
  * Updated standards version.
